--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,12 @@ python:
 - '3.6'
 
 before_install:
-- if [ "$TRAVIS_TAG" != "" ]; then if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get install pandoc; else brew install
-  pandoc; fi; pip install pypandoc; fi
+- if [ "$TRAVIS_TAG" != "" ]; then sudo apt-get install pandoc; pip install pypandoc; fi
+- pip install ddt
 
 install:
 - pip wheel --no-deps --wheel-dir=./dist .
 - pip install dist/*.whl
-
-after_install:
-- pip install ddt
 
 script: python -m unittest discover -s test
 
