Add custom RULE in README.md

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,5 @@ deploy:
   on:
     tags: true
     python: '3.6'
-    all_branches: true
+    skip_cleanup: true
   distributions: bdist_wheel sdist
