Fix tox ini can be install bdist_wheel

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,10 @@ envlist=py27,
         py35,
         py36
 skip_missing_interpreters=True
+skipsdist=True
           
 [testenv]
 deps=ddt
-commands=python -m unittest discover -s test
+commands=/bin/bash -c "pip wheel --no-deps --wheel-dir=./dist ."
+         /bin/bash -c "pip install dist/*.whl"
+         /bin/bash -c "python -m unittest discover -s test"
